# GISCI343

./: .gitignore  README.md
.github/workflows/: static.yml
Course2024/docs/: index.html
Course2025/Lecture2/: Lecture2.html  Lecture2.qmd
Course2025/Lecture3/: Lecture3.Rproj  Lecture3.qmd
Course2025/Lecture4/: Lecture4.Rproj  lecture.txt
Course2025/Lecture5/: Lab1Q4.ipynb  Lecture5.html  pop23.gpkg  yourturn.html  yourturn.ipynb
Lectures/Lecture2/: example.txt
Practicals/Practical1/: lab1_answers.ipynb  lab1_questions.ipynb  prac_week2.txt
Practicals/Practical2/: GISCI343_Lab2.html
Practicals/Practical3/: OOP.ipynb
Practicals/Practical6/: Practical 6 OOP.html
Practicals/Practical7/: Practical7_ Simple OOP.md
Practicals/Week2/: practical_wk2_questions.ipynb
Practicals/Week4/: Arterial_Roads.gpkg  bus_route.gpkg  schools.gpkg  (+1 more)
book/: _quarto.yml  index.qmd
data/: All pedestrian data day by hour 2020.xlsx  All pedestrian data day by hour 2021.xlsx  All pedestrian data day by hour 2022 - December.xlsx  All pedestrian data day by hour 2023 - December.xlsx  All pedestrian data day by hour 2024.xlsx  All pedestrian data day by hour 2025 - December.xlsx  All pedestrian data day by hour to 31 December 2019.xlsx  Pedestrian Geodata (update Dec 2023).xlsx
docs/: index.html
docs/Lecture09/geohello/: .gitignore  README.md  pyproject.toml
docs/Lecture09/geohello/src/geohello/: __init__.py  core.py  loader.py
docs/Lecture09/geohello/src/geohello/data/: sensors.csv
docs/Lecture09/geohello/tests/: test_geohello.py
labs/: lab3.ipynb  pop23_total.csv
(+128 files in other folders)
