[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geohello-uoa"
version = "0.1.0"
description = "A simple geospatial greeting package for GISCI 343 live coding"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Hyesop Shin", email = "hyesop.shin@auckland.ac.nz" },
]
keywords = ["gis", "auckland", "teaching", "giscience", "packaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "pandas>=2.0.0",
]

# Optional features kept out of the core install.
[project.optional-dependencies]
geo = [
    "geopandas>=0.14.0",
    "requests>=2.28.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = ["geohello-uoa[geo,dev]"]

# Hatchling needs to be told what to include in the wheel and the sdist.
# Without these blocks, the data/ folder is missing from the install.
[tool.hatch.build.targets.sdist]
include = [
    "src/geohello/**",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/geohello"]
